初始化提交

--- a/数据库设计文档 -0125.md
+++ b/数据库设计文档 -0125.md
@@ -1,7 +1,7 @@
 # <div align='center' >数据库设计文档</div>
 ##  数据库设计规范
 
-    
+
     1.	表名的定义：
     规范格式：模块名_表名（字母全部小写）
     比如，设备库模块中的传感器：dev_sensor;
@@ -11,22 +11,23 @@
     3.	表字段长度的定义：
     规范格式：长度一般为8的整数倍；
     比如，VARCHAR的长度可为8或16或24或32或64等；
-    
-    
-## ER图
-#### 1、ER图整体概况
+
+
+​    
+## ER01图（创建物模型、下发物模型）
+#### 1、ER01图整体概况
 
 ![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\iot.png)
 
 #### 2、传感器物模型
 
 ![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\sensor.jpg)
-（1）创建传感器基础属性存入dev_sensor表中。
+（1）创建一条传感器数据，将基础属性存入dev_sensor表中。(每一个传感器就是一条数据)
 
-（2）生成类编码，根据厂商和型号判断，如果有则禁止添加，如无则累加1。
+（2）生成类编码（code），根据厂商和型号判断，如果有则禁止添加，如无则累加1。
     			类编码示例：S_001_1。S代表传感器，001代表传感器类型表，1通过厂商和型号判断生成。
     			传感器类型表见IOT流程设计文档。
-（3）创建传感器配置属性存入dev_sensor表中。
+（3）输入传感器配置属性更新到dev_sensor表中。
 
 （4）创建命令，存入dev_command表中。
     由于有些命令不确定后期是否需要添加其他属性，为了扩展存储在dev_command的value字段中
@@ -38,29 +39,44 @@
     value 存储的是 {"type": "float"}
      
 （5）创建点位信息存入dev_properties表中，点位与传感器关联关系存入dev_sensor_properties表中。
-    点位和命令的关联关系保存在 dev_properties表的command_id中。
+        所有的点位信息都在dev_properties表里面
+        所有的传感器数据都在dev_sensor表里面
+        所以需要通过dev_sensor_properties来做关联
+​    点位和命令的关联关系保存在 dev_properties表的command_id中。
 
 #### 3、电气设备物模型
 
 ![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\electric.jpg)
-（1）创建电气设备基础属性存入dev_electric表中。
+（1）创建一条电气设备基础属性存入dev_electric表中。
 
-（2）生成类编码，根据厂商和型号来确定唯一性累加。
+（2）生成类编码（code），根据厂商和型号来确定唯一性累加。
     类编码示例：D_001_1_2。D代表电气设备，001代表电气设备类型，1通过厂商和型号判断生成，2由于不同场景后台累加指定。
     
-（3）筛选电气设备，然后再筛选电气设备中的点位，将关联关系保存到dev_electric_sensor_properties表中。
+（3）输入电气设备的配置属性更新到表中。
 
+（4）筛选传感器，然后再筛选传感器中的点位，将关联关系保存到dev_electric_sensor_properties表中。
+​	dev_properties是所有传感器的点位的集合
+    传感器的点位和电气设备的点位都是通过关联表来关联的。
+    传感器与点位的关联关系保存在dev_sensor_properties表中。
+    电气设备与传感器与点位的关联关系保存在dev_electric_sensor_properties中。
 
 #### 4、配置母版
 
 ![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\template.jpg)
 （1）录入母版的中文名称和描述。保存到表rep_template中。
+    资产库包含三张表rep_electric rep_sensor rep_gateway
+    模板只会保存在rep_electric 和rep_sensor两张表中。
 
-（2）勾选多个电气设备物模型（dev_electric）提交后，在rep_electric表和rep_sensor表生成临时资产项目。
+（2）勾选多个电气设备物模型（dev_electric）提交后，在rep_electric表和rep_sensor表生成临时资产项。
     临时资产项和真实资产项通过类型字段rep_type来标识。（0临时资产项，1真实资产项）
-    gateway_id 存储模板的主键ID
+    rep_electric  中 gateway_id 存储模板的主键ID
     rep_type+gateway_id 来同时锁定属于母版的资源
     
+
+（3）从真实网关提取母版
+    将物联网关关联的数据（rep_electric和rep_sensor表中）复制一份存在表中，
+    并在rep_template表中生成一条数据与刚复制的数据关联。
+
 #### 5、认证流程
 
 （1） 物联网关携带自己的CPU序列号（sn）来请求接入，判断sn是否重复，
