初始化提交

--- a/数据库设计文档 -0125.md
+++ b/数据库设计文档 -0125.md
@@ -74,8 +74,8 @@
     
 
 （3）从真实网关提取母版
-    将物联网关关联的数据（rep_electric和rep_sensor表中）复制一份存在表中，
-    并在rep_template表中生成一条数据与刚复制的数据关联。
+    将物联网关关联的数据（rep_electric和rep_sensor表中）复制一份存在表中，并将rep_type=0.
+    同时在rep_template表中生成一条数据与刚复制的数据关联。
 
 #### 5、认证流程
 
@@ -230,21 +230,23 @@ iot企业表
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` | 主键 | int(11) | PRI | NO |  |  |
 | 2 | `dev_sensor_id` | 设备库电气设备ID | int(10) |  | YES |  |  |
-| 3 | `company_id` | 公司ID | int(10) |  | YES |  |  |
-| 4 | `gateway_id` | 物联网关ID | int(10) |  | YES |  |  |
-| 5 | `organization_id` | 组织ID | int(10) |  | YES |  |  |
-| 6 | `code` | 编码 | varchar(255) |  | YES |  |  |
-| 7 | `permanent_type` | 类型 | varchar(255) |  | YES |  |  |
-| 8 | `permanent_name` | 名称 | varchar(255) |  | YES |  |  |
-| 9 | `permanent_producer` | 厂商 | varchar(255) |  | YES |  |  |
-| 10 | `permanent_description` | 描述 | varchar(255) |  | YES |  |  |
-| 11 | `product_no` | 生产编号 | varchar(255) |  | YES |  |  |
-| 12 | `product_date` | 生产日期 | datetime |  | YES |  |  |
-| 13 | `loction` | 安装位置 | varchar(255) |  | YES |  |  |
-| 14 | `report_period` | 通信周期（单位秒） | int(10) |  | YES |  |  |
-| 15 | `crt_time` | 创建时间 | datetime |  | YES |  |  |
-| 16 | `upd_time` | 更新时间 | datetime |  | YES |  |  |
-| 17 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
+| 3 | `template_id` | 模板ID | int(11) |  | YES |  |  |
+| 4 | `company_id` | 公司ID | int(10) |  | YES |  |  |
+| 5 | `gateway_code` | 物联网关唯一编码 | int(10) |  | YES |  |  |
+| 6 | `organization_id` | 组织ID | int(10) |  | YES |  |  |
+| 7 | `code` | 编码 | varchar(255) |  | YES |  |  |
+| 8 | `permanent_type` | 类型 | varchar(255) |  | YES |  |  |
+| 9 | `permanent_name` | 名称 | varchar(255) |  | YES |  |  |
+| 10 | `permanent_producer` | 厂商 | varchar(255) |  | YES |  |  |
+| 11 | `permanent_description` | 描述 | varchar(255) |  | YES |  |  |
+| 12 | `product_no` | 生产编号 | varchar(255) |  | YES |  |  |
+| 13 | `product_date` | 生产日期 | datetime |  | YES |  |  |
+| 14 | `loction` | 安装位置 | varchar(255) |  | YES |  |  |
+| 15 | `report_period` | 通信周期（单位秒） | int(10) |  | YES |  |  |
+| 16 | `crt_time` | 创建时间 | datetime |  | YES |  |  |
+| 17 | `upd_time` | 更新时间 | datetime |  | YES |  |  |
+| 18 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
+
 
 
 #### 9、 rep_gateway
