初始化提交

--- a/数据库设计文档 -0125.md
+++ b/数据库设计文档 -0125.md
@@ -69,8 +69,7 @@
 
 （2）勾选多个电气设备物模型（dev_electric）提交后，在rep_electric表和rep_sensor表生成临时资产项。
     临时资产项和真实资产项通过类型字段rep_type来标识。（0临时资产项，1真实资产项）
-    rep_electric  中 gateway_id 存储模板的主键ID
-    rep_type+gateway_id 来同时锁定属于母版的资源
+    rep_electric  表中 template_id 存储模板的主键ID
     
 
 （3）从真实网关提取母版
