--- a/权限/权限.md
+++ b/权限/权限.md
@@ -17,8 +17,6 @@ participant IoT平台
 IoT平台-->>超级管理员: 成功
 超级管理员->IoT平台: 选择一个或多个未绑定的物联网关
 IoT平台-->>超级管理员: 成功
-超级管理员->IoT平台: 选择数据权限（其实就是多个部门的物联网关）
-IoT平台-->>超级管理员: 成功
 ```
 
 ## 2.角色配置
@@ -32,6 +30,8 @@ participant IoT平台
 IoT平台-->>超级管理员: 成功
 超级管理员->IoT平台: 选择菜单栏及页面的模块
 IoT平台-->>超级管理员: 成功
+超级管理员->IoT平台: 选择数据权限（其实就是多个部门的物联网关）
+IoT平台-->>超级管理员: 成功
 ```
 
 ## 3.企业用户的创建
@@ -43,8 +43,10 @@ participant IoT平台
 
 超级管理员->IoT平台: 创建角色: 录入用户名称等基本信息
 IoT平台-->>超级管理员: 成功
-超级管理员->IoT平台: 选择角色（绑定菜单权限）
+超级管理员->IoT平台: 选择岗位
 IoT平台-->>超级管理员: 成功
-超级管理员->IoT平台: 选择部门（绑定数据权限）
+超级管理员->IoT平台: 选择角色（绑定菜单权限、数据权限）
+IoT平台-->>超级管理员: 成功
+超级管理员->IoT平台: 选择部门
 IoT平台-->>超级管理员: 生成企业用户成功
 ```
