初始化提交

--- a/模板配置/数据库设计文档 -0125.md
+++ b/模板配置/数据库设计文档 -0125.md
@@ -17,11 +17,11 @@
 ## ER01图（创建物模型、下发物模型）
 #### 1、ER01图整体概况
 
-![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\iot.png)
+![](./iot模板.png)
 
 #### 2、传感器物模型
 
-![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\sensor.jpg)
+![](./sensor.jpg)
 （1）创建一条传感器数据，将基础属性存入dev_sensor表中。(每一个传感器就是一条数据)
 
 （2）生成类编码（code），根据厂商和型号判断，如果有则禁止添加，如无则累加1。
@@ -46,7 +46,7 @@
 
 #### 3、电气设备物模型
 
-![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\electric.jpg)
+![](./electric.jpg)
 （1）创建一条电气设备基础属性存入dev_electric表中。
 
 （2）生成类编码（code），根据厂商和型号来确定唯一性累加。
@@ -62,7 +62,7 @@
 
 #### 4、配置母版
 
-![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\template.jpg)
+![](template.jpg)
 （1）录入母版的中文名称和描述。保存到表rep_template中。
     资产库包含三张表rep_electric rep_sensor rep_gateway
     模板只会保存在rep_electric 和rep_sensor两张表中。
@@ -95,7 +95,8 @@
 #### 6、激活流程
 
 （1）管理员给某个物联网关指定某个企业（iot平台上这个物联网关就拥有了企业授权码）。
-
+        绑定company表的主键到rep_gateway的company_id
+        
 （2）现场操作人员在现场输入企业授权码，物联网关携带企业授权码请求iot平台进行激活。
 
 （3）iot平台比较授权码是否相同如果通过则激活成功，修改rep_gateway表中的rep_type为1（真实资产）。
@@ -103,7 +104,7 @@
 
 #### 7、配置模板
 
-![](C:\Users\36111\Desktop\明信项目\二期文档\设计文档\数据库设计\config.jpg)
+![](config.jpg)
 （1）管理员给某个物联网关选择某个母版保存。
         后台系统将母版下的电气设备和传感器复制一份数据存入相应的表中，并标识为真实资产，同时生成传感器和电气设备唯一编码。
         唯一编码规则：类编码+主键ID
@@ -177,16 +178,16 @@ iot企业表
 
 
 #### 5、 dev_properties
-传感器属性表
+传感器点位表
 
 | 序号 | 名称 | 描述 | 类型 | 键 | 为空 | 额外 | 默认值 |
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` | 主键 | int(11) | PRI | NO |  |  |
 | 2 | `properties_name` | 点位中文名称 | varchar(255) |  | YES |  |  |
 | 3 | `name` | 点位名 | varchar(255) |  | YES |  |  |
-| 4 | `value` | 点位属性 | varchar(4000) |  | YES |  |  |
+| 4 | `value` | 属性（包含了数据类型） | varchar(4000) |  | YES |  |  |
 | 5 | `command_id` | 命令ID | int(10) |  | YES |  |  |
-| 6 | `formula` | 公式（有些点位数据需要做转换：例如乘以0.3） | varchar(255) |  | YES |  |  |
+| 6 | `formula` | 系数公式（有些点位数据需要做转换：例如乘以0.3） | varchar(255) |  | YES |  |  |
 | 7 | `command_ref` | 命令ref | varchar(255) |  | YES |  |  |
 | 8 | `command_option` | 命令option(命令后的取位) | varchar(255) |  | YES |  |  |
 
@@ -230,10 +231,10 @@ iot企业表
 | 1 | `id` | 主键 | int(11) | PRI | NO |  |  |
 | 2 | `dev_sensor_id` | 设备库电气设备ID | int(10) |  | YES |  |  |
 | 3 | `template_id` | 模板ID | int(11) |  | YES |  |  |
-| 4 | `company_id` | 公司ID | int(10) |  | YES |  |  |
+| 4 | `dept_id` | 部门ID（数据权限筛选） | int(10) |  | YES |  |  |
 | 5 | `gateway_code` | 物联网关唯一编码 | int(10) |  | YES |  |  |
 | 6 | `organization_id` | 组织ID | int(10) |  | YES |  |  |
-| 7 | `code` | 编码 | varchar(255) |  | YES |  |  |
+| 7 | `code` | 电气设备唯一编码 | varchar(255) |  | YES |  |  |
 | 8 | `permanent_type` | 类型 | varchar(255) |  | YES |  |  |
 | 9 | `permanent_name` | 名称 | varchar(255) |  | YES |  |  |
 | 10 | `permanent_producer` | 厂商 | varchar(255) |  | YES |  |  |
@@ -245,7 +246,7 @@ iot企业表
 | 16 | `crt_time` | 创建时间 | datetime |  | YES |  |  |
 | 17 | `upd_time` | 更新时间 | datetime |  | YES |  |  |
 | 18 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
-
+| 19 | `extended` | 扩展属性 | varchar(3000) |  | YES |  |  |
 
 
 #### 9、 rep_gateway
@@ -255,23 +256,25 @@ iot企业表
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` | 主键ID | int(11) | PRI | NO |  |  |
 | 2 | `organzation_id` | 组织ID | int(11) |  | YES |  |  |
-| 3 | `company_id` | 企业ID | int(11) |  | YES |  |  |
-| 4 | `rep_template_id` | 配置母版ID | int(11) |  | YES |  |  |
-| 5 | `gateway_code` | 物联网关编码 | varchar(255) |  | YES |  |  |
-| 6 | `gateway_secret` | 网关秘钥 | varchar(255) |  | YES |  |  |
-| 7 | `sn` | 物联网关cpu序列号 | varchar(255) |  | YES |  |  |
-| 8 | `name` | 名称 | varchar(255) |  | YES |  |  |
-| 9 | `producter` | 厂家 | varchar(255) |  | YES |  |  |
-| 10 | `model` | 型号 | varchar(255) |  | YES |  |  |
-| 11 | `longitude` | 精度 | varchar(255) |  | YES |  |  |
-| 12 | `latitude` | 维度 | varchar(255) |  | YES |  |  |
-| 13 | `permanent` | 固有属性 | varchar(3000) |  | YES |  |  |
-| 14 | `configurable` | 配置属性 | varchar(3000) |  | YES |  |  |
-| 15 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
-| 16 | `technical` | 技术属性 | varchar(3000) |  | YES |  |  |
-| 17 | `extended` | 扩展属性 | varchar(3000) |  | YES |  |  |
-| 18 | `status` | 状态（0未认证状态，1未激活状态，2激活状态） | int(1) |  | YES |  |  |
-| 19 | `config_version` | 配置版本（每一次配置修改版本号+1） | varchar(255) |  | YES |  |  |
+| 3 | `dept_id` | 部门ID（数据权限） | int(11) |  | YES |  |  |
+| 4 | `company_id` | 企业ID | int(11) |  | YES |  |  |
+| 5 | `rep_template_id` | 配置母版ID | int(11) |  | YES |  |  |
+| 6 | `gateway_code` | 物联网关编码 | varchar(255) |  | YES |  |  |
+| 7 | `gateway_secret` | 网关秘钥 | varchar(255) |  | YES |  |  |
+| 8 | `sn` | 物联网关cpu序列号 | varchar(255) |  | YES |  |  |
+| 9 | `name` | 名称 | varchar(255) |  | YES |  |  |
+| 10 | `producter` | 厂家 | varchar(255) |  | YES |  |  |
+| 11 | `model` | 型号 | varchar(255) |  | YES |  |  |
+| 12 | `longitude` | 精度 | varchar(255) |  | YES |  |  |
+| 13 | `latitude` | 维度 | varchar(255) |  | YES |  |  |
+| 14 | `permanent` | 固有属性 | varchar(3000) |  | YES |  |  |
+| 15 | `configurable` | 配置属性 | varchar(3000) |  | YES |  |  |
+| 16 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
+| 17 | `technical` | 技术属性 | varchar(3000) |  | YES |  |  |
+| 18 | `extended` | 扩展属性 | varchar(3000) |  | YES |  |  |
+| 19 | `status` | 状态（0未认证状态，1未激活状态，2激活状态） | int(1) |  | YES |  |  |
+| 20 | `config_version` | 配置版本（每一次配置修改版本号+1） | varchar(255) |  | YES |  |  |
+| 21 | `online` | 在线/离线 | int(1) |  | YES |  |  |
 
 
 #### 10、 rep_organization
@@ -281,12 +284,12 @@ iot企业表
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` |  | int(10) | PRI | NO |  |  |
 | 2 | `parent_id` | 父ID | int(10) |  | YES |  |  |
-| 3 | `type` | 类型（变电站/箱变） | int(1) |  | YES |  |  |
+| 3 | `type` | 类型（变电站/线路/平台/箱变） | int(1) |  | YES |  |  |
 | 4 | `name` | 名称 | varchar(255) |  | YES |  |  |
 | 5 | `voltage_level` | 电压等级 | varchar(255) |  | YES |  |  |
 | 6 | `capacity` | 协议容量 | varchar(255) |  | YES |  |  |
-| 7 | `platform_type` | 平台类型（钻井/生产/压裂） | int(1) |  | YES |  |  |
-| 8 | `permanent` | 固有属性 | text |  | YES |  |  |
+| 7 | `platform_type` | 工作类型（只有箱变有）（钻井/生产/压裂） | int(1) |  | YES |  |  |
+| 8 | `permanent` | 固有属性(包含井队：string) | text |  | YES |  |  |
 | 9 | `configuratble` | 配置属性 | text |  | YES |  |  |
 | 10 | `technology` | 技术属性 | text |  | YES |  |  |
 | 11 | `extend` | 扩展属性 | text |  | YES |  |  |
@@ -299,9 +302,9 @@ iot企业表
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` | 主键 | int(10) | PRI | NO |  |  |
 | 2 | `dev_sensor_id` | 设备传感器ID | int(10) |  | YES |  |  |
-| 3 | `company_id` | 公司ID | int(10) |  | YES |  |  |
+| 3 | `dept_id` | 部门ID（数据权限筛选） | int(10) |  | YES |  |  |
 | 4 | `rep_electric_id` | 资产电气设备ID | int(10) |  | YES |  |  |
-| 5 | `code` | 类编码 | varchar(255) |  | YES |  |  |
+| 5 | `code` | 全局唯一编码 | varchar(255) |  | YES |  |  |
 | 6 | `permanent_name` | 名称 | varchar(255) |  | YES |  |  |
 | 7 | `permanent_model` | 型号 | varchar(255) |  | YES |  |  |
 | 8 | `permanent_version` | 版本 | varchar(255) |  | YES |  |  |
@@ -329,7 +332,7 @@ iot企业表
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` |  | int(11) | PRI | NO |  |  |
 | 2 | `template_name` | 模板名称 | varchar(255) |  | YES |  |  |
-| 3 | `company_id` | 公司ID | int(10) |  | YES |  |  |
+| 3 | `dept_id` | 部门ID（用于数据权限） | int(10) |  | YES |  |  |
 | 4 | `descprtion` | 描述 | varchar(255) |  | YES |  |  |
 | 5 | `crt_time` | 创建时间 | datetime |  | YES |  |  |
 | 6 | `udp_time` | 更新时间 | datetime |  | YES |  |  |
