初始化提交

--- a/模板配置/数据库设计文档 -0125.md
+++ b/模板配置/数据库设计文档 -0125.md
@@ -19,6 +19,23 @@
 
 ![](./iot模板.png)
 
++ 所有传感器的基础属性、配置属性在dev_sensor表中
++ 所有传感器的命令在dev_command表中
++ 所有点位信息（不分传感器与电气设备）在dev_properities表中
++ 传感器的点位与命令的关联关系保存在dev_properities表中的command_id字段
++ 传感器与点位的关联关系保存在dev_sensor_properities表中
++ 所有电气设备的基础属性、配置属性在dev_electric表中
++ 电气设备与传感器及点位的关联关系保存在dev_electric_sensor_properties中
++ 资产库包含三张表rep_electric、rep_sensor、rep_gateway。通过rep_type字段来标识临时资产项（0）、真实资产项（1）
++ 模板只会保存在rep_electric、rep_sensor两张表中
++ 配置母版的名称保存到表rep_template中，其主体（传感器与电气设备）分别保存在rep_electric、rep_sensor（rep_type都为=0）。通过rep_electric中template_id 存储模板的主键ID。
++ 物联网关的基本属性保存在rep_gateway表中，其中rep_template_id字段为配置母版ID、gateway_code字段为物联网关的IOT编码、sn字段为物联网关cpu序列号。
+    其中的permanent（固有属性）、configurable（配置属性）、technical（技术属性）、 extended（扩展属性）4个字段都是3000字符【与传感器、电气设备相关的放在另外两张表rep_electric、rep_sensor中】。
++ 资产库rep_electric表中通过gateway_code关联某个实体物联网关，表rep_sensor中通过rep_electric_id字段关联到电气设备。
++ 表rep_sensor中通过configuratable（配置属性）、extended（扩展属性）两个文本字段来应对可扩展的属性参数。
++ 所有字段长度是3000或者文本的都是可扩展属性。
+
+
 #### 2、传感器物模型
 
 ![](./sensor.jpg)
