初始化提交

--- a/模板配置/数据库设计文档 -0125.md
+++ b/模板配置/数据库设计文档 -0125.md
@@ -249,7 +249,7 @@ iot企业表
 | 2 | `dev_sensor_id` | 设备库电气设备ID | int(10) |  | YES |  |  |
 | 3 | `template_id` | 模板ID | int(11) |  | YES |  |  |
 | 4 | `dept_id` | 部门ID（数据权限筛选） | int(10) |  | YES |  |  |
-| 5 | `gateway_code` | 物联网关唯一编码 | int(10) |  | YES |  |  |
+| 5 | `rep_gateway_id` | 物联网关唯一编码 | int(10) |  | YES |  |  |
 | 6 | `organization_id` | 组织ID | int(10) |  | YES |  |  |
 | 7 | `code` | 电气设备唯一编码 | varchar(255) |  | YES |  |  |
 | 8 | `permanent_type` | 类型 | varchar(255) |  | YES |  |  |
