--- a/模板配置/数据库设计文档 -0125.md
+++ b/模板配置/数据库设计文档 -0125.md
@@ -246,7 +246,7 @@ iot企业表
 | 序号 | 名称 | 描述 | 类型 | 键 | 为空 | 额外 | 默认值 |
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
 | 1 | `id` | 主键 | int(11) | PRI | NO |  |  |
-| 2 | `dev_sensor_id` | 设备库电气设备ID | int(10) |  | YES |  |  |
+| 2 | `dev_eletric_id` | 设备库电气设备ID | int(10) |  | YES |  |  |
 | 3 | `template_id` | 模板ID | int(11) |  | YES |  |  |
 | 4 | `dept_id` | 部门ID（数据权限筛选） | int(10) |  | YES |  |  |
 | 5 | `rep_gateway_id` | 物联网关唯一编码 | int(10) |  | YES |  |  |
