初始化提交

--- a/模板配置/数据库设计文档 -0125.md
+++ b/模板配置/数据库设计文档 -0125.md
@@ -289,10 +289,9 @@ iot企业表
 | 16 | `rep_type` | 资产类型 | int(1) |  | YES |  |  |
 | 17 | `technical` | 技术属性 | varchar(3000) |  | YES |  |  |
 | 18 | `extended` | 扩展属性 | varchar(3000) |  | YES |  |  |
-| 19 | `status` | 状态（0未认证状态，1未激活状态，2激活状态） | int(1) |  | YES |  |  |
+| 19 | `status` | 状态（1未激活状态，2激活状态） | int(1) |  | YES |  |  |
 | 20 | `config_version` | 配置版本（每一次配置修改版本号+1） | varchar(255) |  | YES |  |  |
 | 21 | `online` | 在线/离线 | int(1) |  | YES |  |  |
-
 
 #### 10、 rep_organization
 组织架构表
